# options-pricing-ml

./: .env.example  .gitignore  .lightning  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  pyproject.toml  render.yaml  setup_lightning.sh
.devcontainer/: devcontainer.json  post-create.sh
docs/: ML_PROJECT_SETUP.md  ROADMAP.md
docs/model_cards/: xgboost_baseline.md
scripts/: train_xgboost.py
src/data/: __init__.py  loader.py  splitter.py
src/evaluation/: __init__.py  explainer.py
src/models/tree_based/: __init__.py  xgboost_model.py
src/serving/: __init__.py  api.py  schemas.py
src/training/: __init__.py  tuner.py
tests/: conftest.py
tests/unit/: test_loader.py  test_splitter.py  test_xgboost_model.py
